add more introuctiory documentation to atlas notebooks

--- a/atlas/notebooks/create_atlas_service.ipynb
+++ b/atlas/notebooks/create_atlas_service.ipynb
@@ -1,22 +1,33 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/notebooks/deploy_whisper_and_sentence_transformer_to_huggingface.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "fiKqeBJ9zf0w"
       },
       "source": [
-        "# Deploy Whisper and Sentence Transformer Model to HuggingFace"
+        "# Transcribe and Embed Youtube Videos with Huggingface Whisper\n",
+        "\n",
+        "How to create a service that can transcribe any video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
+        "\n",
+        "For more context, see the Atlas blog post, [Atlas: Find anything on Youtube](https://atila.ca/blog/tomiwa/atlas) and part 2 notebook: [Long Form Question Answering on Youtube](https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/notebooks/deploy_whisper_and_sentence_transformer_to_huggingface.ipynb).\n",
+        "\n",
+        "\n",
+        "See Also:\n",
+        "\n",
+        "1. https://huggingface.co/docs/inference-endpoints/guides/custom_handler\n",
+        "2. https://www.philschmid.de/custom-inference-handler\n",
+        "\n",
+        "Another alternative is to use a [Serverless Deployment of the sentence-transformer model](https://aseifert.com/p/serverless-sentence-transformer/)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/notebooks/deploy_whisper_and_sentence_transformer_to_huggingface.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,6 +58,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "kW7gBEJpgsDE"
@@ -54,12 +66,12 @@
       "source": [
         "## Create a Custom inference handler\n",
         "\n",
-        "See:\n",
         "\n",
-        "1. https://huggingface.co/docs/inference-endpoints/guides/custom_handler\n",
-        "2. https://www.philschmid.de/custom-inference-handler\n",
+        "### Deploy your own version of this model\n",
         "\n",
-        "Another alternative is using a [Serverless Deployment of the sentence-transformer model](https://aseifert.com/p/serverless-sentence-transformer/)"
+        "1. Fork the [tomiwa1a/video-search](https://huggingface.co/tomiwa1a/video-search) repo with [repo_duplicator](https://huggingface.co/spaces/osanseviero/repo_duplicator)\n",
+        "1. Modify `handler.py` as necessary\n",
+        "1. [Deploy as an inference endpoint](https://ui.endpoints.huggingface.co/new?repository=tomiwa1a/video-search) (credit card required)"
       ]
     },
     {
@@ -330,12 +342,19 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "qD1xESiMoOad"
       },
       "source": [
         "# Transcribe and Search Video\n",
+        "\n",
+        "We can either run the `EndpointHandler` locally or send an HTTP request to the remote version on Huggingface.\n",
+        "\n",
+        "Locally is good because you don't have to pay for HuggingFace GPU and you can [use a free GPU on Google Colab](https://www.tutorialspoint.com/google_colab/google_colab_using_free_gpu.htm). However, others won't be able to access your service. Note: You don't need a GPU to use this, you can use a CPU. But it will be much slower.\n",
+        "\n",
+        "Remote on Huggingface is good because anyone can access it from any device.\n",
         "\n",
         "1. Call the Model Inference we created in the last step\n",
         "    1. Using the Inference endpoint class locally\n",
@@ -351,15 +370,6 @@
         "\n",
         "1. [Fixing YouTube Search with OpenAI's Whisper](https://www.pinecone.io/learn/openai-whisper/)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ft_jUAO9l12g"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -1228,10 +1238,10 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "toc_visible": true,
       "authorship_tag": "ABX9TyOCNDAnSsRlKjQMDutMMUZs",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
     },
     "gpuClass": "standard",
     "kernelspec": {
