improve documentation for Atlas

--- a/atlas/notebooks/create_atlas_service.ipynb
+++ b/atlas/notebooks/create_atlas_service.ipynb
@@ -7,12 +7,11 @@
         "id": "fiKqeBJ9zf0w"
       },
       "source": [
-        "# Transcribe and Embed Youtube Videos with Huggingface Whisper\n",
+        "# Transcribe and Embed Youtube Videos\n",
         "\n",
         "How to create a service that can transcribe any video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
         "\n",
-        "For more context, see the Atlas blog post, [Atlas: Find anything on Youtube](https://atila.ca/blog/tomiwa/atlas) and part 2 notebook: [Long Form Question Answering on Youtube](https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/notebooks/deploy_whisper_and_sentence_transformer_to_huggingface.ipynb).\n",
-        "\n",
+        "For more context, see the Atlas blog post, [Atlas: Find anything on Youtube](https://atila.ca/blog/tomiwa/atlas) and part 2 notebook: [Long Form Question Answering on Youtube](https://github.com/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb).\n",
         "\n",
         "See Also:\n",
         "\n",
@@ -64,14 +63,21 @@
         "id": "kW7gBEJpgsDE"
       },
       "source": [
-        "## Create a Custom inference handler\n",
+        "## Deploying for Production\n",
         "\n",
-        "\n",
-        "### Deploy your own version of this model\n",
+        "### Deploying your ML Inference Handler Model\n",
         "\n",
         "1. Fork the [tomiwa1a/video-search](https://huggingface.co/tomiwa1a/video-search) repo with [repo_duplicator](https://huggingface.co/spaces/osanseviero/repo_duplicator)\n",
         "1. Modify `handler.py` as necessary\n",
-        "1. [Deploy as an inference endpoint](https://ui.endpoints.huggingface.co/new?repository=tomiwa1a/video-search) (credit card required)"
+        "1. [Deploy as an inference endpoint](https://ui.endpoints.huggingface.co/new?repository=tomiwa1a/video-search) (credit card required)\n",
+        "\n",
+        "## Deploying as an API\n",
+        "\n",
+        "The functons in this notebook that involve pre-processing the request to the ML model and post-processing the response, (everything except for the Custom Inference Handler) can be combined together and deployed as a web server to allow people to interact with this service.\n",
+        "\n",
+        "[Deploy using Flask](https://github.com/atilatech/atlas-service/tree/master/atlas):  Flask is the simplest and quickest option but you will have to add support for database and authentication or deploy it using.\n",
+        "\n",
+        "[Deploy using Django](https://github.com/atilatech/atila-core-service/tree/master/atlas): Django requires a bit more initial setup but will give you more features such as database and authentication support. If you plan on building something that lasts longer than a weekend, plan on working with others and you plan on having other people use it, I recommend using Django."
       ]
     },
     {
@@ -368,7 +374,7 @@
         "\n",
         "1. Query phrases using vector database\n",
         "\n",
-        "1. [Fixing YouTube Search with OpenAI's Whisper](https://www.pinecone.io/learn/openai-whisper/)"
+        "1. [Fixing YouTube Search with OpenAI's Whisper](https://www.pinecone.io/learn/openai-whisper/)\n"
       ]
     },
     {
@@ -1245,17 +1251,17 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.7.7 (default, Aug  2 2021, 18:11:45) \n[Clang 10.0.0 (clang-1000.10.44.4)]"
+      "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "efa22321ce2c4fe7909656b696c1b38fb6b86145dbd86b8e25f3a1da3849a236"
+        "hash": "99e086eccb441fa1228dffc6d0e819d43cb52e5c644083572317aeec389d6017"
       }
     },
     "widgets": {
