--- a/atlas/notebooks/question_answering_youtube.ipynb
+++ b/atlas/notebooks/question_answering_youtube.ipynb
@@ -1,16 +1,7 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/add_long_form_answering/atlas/notebooks/question_answering_youtube.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5NknMdCvvBYW"
@@ -18,22 +9,26 @@
       "source": [
         "# Answer Questions using Youtube\n",
         "\n",
+        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
         "This notebook shows how to give long-form answers to questions using Youtube.\n",
         "\n",
-        "Inspired by [Abstractive Question Answering](https://docs.pinecone.io/docs/abstractive-question-answering) and [Long Form Question Answering in Haystack](https://www.pinecone.io/learn/haystack-lfqa/).\n",
-        "\n",
-        "This tutorial builds on the previous tutorial, Create an Atlas service[todo add link], that showed how to index Youtube videos and return matching sections of a video given a search term. \n",
+        "This is part 2 of a series on building AI powered search tools. See the previous tutorial notebook, [Transcribe and Embed Youtube Videos](https://github.com/atilatech/atila-core-service/blob/master/atlas/notebooks/create_atlas_service.ipynb)\n",
         "\n",
         "This tutorial will be covering how to take those matching sections and combine them together to generate a long-form answer.\n",
         "\n",
         "At a high-level it is a 2 step process:\n",
         "\n",
-        "1. Find sentences that have the relevant sections\n",
+        "1. Find sentences that have the relevant sections (explained in part 1)\n",
         "\n",
-        "2. Combine the sections together to form a coherent answer"
+        "2. Combine the sections together to form a coherent answer\n",
+        "\n",
+        "\n",
+        "Inspired by [Abstractive Question Answering](https://docs.pinecone.io/docs/abstractive-question-answering) and [Long Form Question Answering in Haystack](https://www.pinecone.io/learn/haystack-lfqa/)."
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0Uzy62mbvBYY"
@@ -41,7 +36,7 @@
       "source": [
         "## Get Relevant Context\n",
         "\n",
-        "First we are going to send a query \"best exercises for longevity\" and it will return all the videos that are related to the topics, exercise and longevity."
+        "We are going to send a query \"what shoes should I wear\" and it will return all the videos that talk about Shoes. Then it willl combine those different answers together to give a long-form answer, summarizing the different videos."
       ]
     },
     {
@@ -56,6 +51,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "95Cf1t6xvBYZ"
@@ -64,7 +60,7 @@
         "## Get API Keys\n",
         "\n",
         "1. You will need a [Pinecone API key (free)](https://app.pinecone.io/).\n",
-        "2. Deploy [this model](https://huggingface.co/tomiwa1a/openai-whisper-endpoint) as an inference endpoint."
+        "2. Run it locally or[deploy the model as an inference endpoint ](https://huggingface.co/tomiwa1a/openai-whisper-endpoint)(credit card required)."
       ]
     },
     {
