--- a/atlas/notebooks/create_atlas_service.ipynb
+++ b/atlas/notebooks/create_atlas_service.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Transcribe and Embed Youtube Videos\n",
         "\n",
-        "How to create a service that can transcribe any video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
+        "This notebook covers how to create a service that can transcribe any Youtube video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
         "\n",
         "For more context, see the Atlas blog post, [Atlas: Find anything on Youtube](https://atila.ca/blog/tomiwa/atlas) and part 2 notebook: [Long Form Question Answering on Youtube](https://github.com/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb).\n",
         "\n",
