--- a/atlas/notebooks/create_atlas_service.ipynb
+++ b/atlas/notebooks/create_atlas_service.ipynb
@@ -9,7 +9,9 @@
       "source": [
         "# Transcribe and Embed Youtube Videos\n",
         "\n",
-        "How to create a service that can transcribe any video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
+        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/create_atlas_service.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
+        "This notebook shows wow to create a service that can transcribe any Youtube video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
         "\n",
         "For more context, see the Atlas blog post, [Atlas: Find anything on Youtube](https://atila.ca/blog/tomiwa/atlas) and part 2 notebook: [Long Form Question Answering on Youtube](https://github.com/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb).\n",
         "\n",
@@ -19,14 +21,6 @@
         "2. https://www.philschmid.de/custom-inference-handler\n",
         "\n",
         "Another alternative is to use a [Serverless Deployment of the sentence-transformer model](https://aseifert.com/p/serverless-sentence-transformer/)"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/notebooks/deploy_whisper_and_sentence_transformer_to_huggingface.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
