add summarize video notebook

--- a/atlas/notebooks/create_atlas_service.ipynb
+++ b/atlas/notebooks/create_atlas_service.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Transcribe and Embed Youtube Videos\n",
         "\n",
-        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/create_atlas_service.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/create_atlas_service.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
         "This notebook shows how to create a service that can transcribe any Youtube video using Whisper and then embed the transcript into a vector array to allow for vector search.\n",
         "\n",
@@ -1251,7 +1251,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+      "version": "3.9.6"
     },
     "vscode": {
       "interpreter": {
