--- a/atlas/notebooks/question_answering_youtube.ipynb
+++ b/atlas/notebooks/question_answering_youtube.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Answer Questions using Youtube\n",
         "\n",
-        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "<a href=\"https://colab.research.google.com/github/atilatech/atila-core-service/blob/master/atlas/notebooks/question_answering_youtube.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
         "This notebook shows how to give long-form answers to questions using Youtube.\n",
         "\n",
@@ -691,7 +691,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+      "version": "3.9.6"
     },
     "orig_nbformat": 4,
     "vscode": {
