add summarizer to huggingface endpoint handler

--- a/atlas/notebooks/summarize_video.ipynb
+++ b/atlas/notebooks/summarize_video.ipynb
@@ -91,9 +91,9 @@
         "        if \"inputs\" not in data:\n",
         "            raise Exception(f\"data is missing 'inputs' key which  EndpointHandler expects. Received: {data}\"\n",
         "                            f\" See: https://huggingface.co/docs/inference-endpoints/guides/custom_handler#2-create-endpointhandler-cp\")\n",
-        "        is_summarize = data.pop(\"summarize\", False)\n",
+        "        summarize = data.pop(\"summarize\", False)\n",
         "\n",
-        "        if is_summarize:\n",
+        "        if summarize:\n",
         "            return {\"summary\": self.summarize_video(data[\"segments\"])}\n",
         "        else:\n",
         "            return {\"error\": \"no valid action found\"}\n",
@@ -107,7 +107,7 @@
         "            print('text', segment['text'])\n",
         "            print('summary', segment['summary'])\n",
         "\n",
-        "        return combined_segments\n",
+        "        return segments\n",
         "        "
       ]
     },
